--- a/index7Sekcja3.html
+++ b/index7Sekcja3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css2/aaaa.css">
+    <link rel="stylesheet" href="css/style7Sekcja3.css">
 </head>
 <body>
     <div class="size color1"></div>
@@ -15,7 +15,7 @@
     <div class="size color6"></div>
     <div class="size color7"></div>
     <div class="size color8"></div>
-    adadddadadad
+    
     
 </body>
 </html>
